# wishlist

./: Cargo.toml
config/: default.toml
src/lib/application/: mod.rs  user.rs  wishlist.rs
src/lib/application/wishlist/: repository.rs  services.rs
src/lib/domain/: mod.rs  user.rs  wishlist.rs
src/lib/domain/user/: email.rs  password.rs  repository.rs  service.rs
src/lib/domain/wishlist/: item.rs  name.rs  repository.rs  service.rs  slug.rs
src/lib/domain/wishlist/item/: description.rs  image_url.rs  link_url.rs  price.rs  repository.rs  service.rs  title.rs
src/lib/infrastructure/: config.rs  logging.rs  mod.rs
src/lib/infrastructure/persistence/: in_memory.rs
src/lib/infrastructure/persistence/in_memory/: item.rs  user.rs  wishlist.rs
src/lib/interface/: http.rs
src/lib/interface/http/: handlers.rs
src/lib/interface/http/handlers/: create_user.rs  create_wishlist.rs
tests/api/: health_check.rs
