[package]
name = "wishlist"
version = "0.1.0"
edition = "2021"

[lib]
name = "wishlist"
crate-type = ["cdylib", "rlib"]
path = "src/lib/lib.rs"

[[bin]]
name = "api"
path = "src/bin/api.rs"

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["macros"] }
config = "0.15.11"
dotenv = "0.15.0"
mockall = "0.13.1"
reqwest = "0.12.15"
rust_decimal = "1.37.1"
serde = { version = "1.0.219", features = ["std", "derive"] }
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full", "macros", "test-util"] }
tower-http = { version = "0.6.2", features = ["trace", "tracing"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = "2.5.4"
uuid = { version = "1.16.0", features = ["v4", "v7", "v8"] }
